# curvefitter

./: .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml  run.sh  sonar-project.properties  test_cors.sh
.github/workflows/: build.yml  docker-publish.yml  test-sonar.yml
app/: __init__.py  __main__.py  main.py
app/static/: style.css
app/templates/: index.html
tests/: test_cli_entrypoint.py  test_main.py
