[project]
name = "curve-fitter"
version = "0.1.0"
description = "FastAPI service streaming synthetic emerging market swap curves via SSE"
readme = "README.md"
authors = [{ name = "Olivier Bonnemaison" }]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "numpy==1.26.4",
    "mangum>=0.19.0",
    "uvicorn>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "coverage[toml]>=7.4",
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "httpx"
]

[tool.pytest.ini_options]
addopts = "--maxfail=1 --disable-warnings"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.coverage.xml]
output = "coverage.xml"

[project.scripts]
curve-fitter = "app.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["app"]
